--- a/res/theme/Inspeccion.ui
+++ b/res/theme/Inspeccion.ui
@@ -8,21 +8,21 @@
       <str>Tab</str>
       <str>Tab</str>
     </custom>
-    <component type="Container" name="Container" tabTitle="Datos" cloudDestinationProperty="Container" layout="FlowLayout" flowLayoutFillRows="false" flowLayoutAlign="1" flowLayoutValign="0" >
-      <component type="Container" name="Container4" cloudDestinationProperty="Container4" focusable="false" flatten="true" layout="GridLayout" gridLayoutRows="4" gridLayoutColumns="2" >
-        <component type="TextField" name="ContenedorNum" cloudBoundProperty="text" cloudDestinationProperty="ContenedorNum" text="" hint="Contenedor n&#xfa;mero" >
+    <component type="Container" name="ContainerTab1" tabTitle="Datos" cloudDestinationProperty="Container" layout="BoxLayout" boxLayoutAxis="Y" >
+      <component type="ComponentGroup" name="ComponentGroup" cloudDestinationProperty="ComponentGroup" >
+        <component type="TextField" name="ContenedorNum" cloudBoundProperty="text" cloudDestinationProperty="ContenedorNum" text="" hint="N&#xfa;mero de contenedor" >
         </component>
         <component type="TextField" name="Tamano" cloudBoundProperty="text" cloudDestinationProperty="TextField1" text="" hint="Tama&#xf1;o" >
         </component>
         <component type="TextField" name="Chasis" cloudBoundProperty="text" cloudDestinationProperty="TextField3" text="" hint="Chasis" >
         </component>
-        <component type="TextField" name="TrailerPlaca" cloudBoundProperty="text" cloudDestinationProperty="TextField2" text="" hint="Trailer placa" >
+        <component type="TextField" name="TrailerPlaca" cloudBoundProperty="text" cloudDestinationProperty="TextField2" text="" hint="Placa de trailer" >
         </component>
         <component type="TextField" name="Cliente" cloudBoundProperty="text" cloudDestinationProperty="Cliente" text="" hint="Cliente" >
         </component>
         <component type="TextField" name="Fecha" cloudBoundProperty="text" cloudDestinationProperty="Fecha" focusable="true" enabled="true" text="" hint="Fecha" >
         </component>
-        <component type="TextField" name="Agencia" cloudBoundProperty="text" cloudDestinationProperty="Agencia" text="" hint="Agencia" >
+        <component type="TextField" name="Agencia" cloudBoundProperty="text" cloudDestinationProperty="Agencia" text="" hint="Agencia naviera" >
         </component>
         <component type="TextField" name="Vapor" cloudBoundProperty="text" cloudDestinationProperty="Vapor" text="" hint="Vapor" >
         </component>
@@ -32,11 +32,41 @@
         </component>
       </component>
     </component>
-    <component type="Container" name="Container1" tabTitle="Tab" cloudDestinationProperty="Container1" >
+    <component type="Container" name="ContainerTab2" tabTitle="Tab" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
+      <component type="Container" name="Container1" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
+        <component type="Label" name="Label" cloudDestinationProperty="Label" text="Puertas" icon="puertas.png" >
+        </component>
+        <component type="Container" name="Container" cloudDestinationProperty="Container" >
+          <component type="CheckBox" name="PI" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          </component>
+          <component type="CheckBox" name="PD" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          </component>
+        </component>
+      </component>
+      <component type="Container" name="Container2" cloudDestinationProperty="Container2" layout="BoxLayout" boxLayoutAxis="Y" >
+        <component type="Label" name="Label1" cloudDestinationProperty="Label1" text="Pared frontal interna" icon="paredFrontalInterna.png" >
+        </component>
+        <component type="Container" name="Container3" cloudDestinationProperty="Container" >
+          <component type="CheckBox" name="PFII" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          </component>
+          <component type="CheckBox" name="PFID" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          </component>
+        </component>
+      </component>
+      <component type="Container" name="Container3" cloudDestinationProperty="Container2" layout="BoxLayout" boxLayoutAxis="Y" >
+        <component type="Label" name="Label1" cloudDestinationProperty="Label1" text="Unidad de refrigeraci&#xf3;n" icon="uniadRefrigeracion.png" >
+        </component>
+        <component type="Container" name="Container3" cloudDestinationProperty="Container" >
+          <component type="CheckBox" name="Cables" cloudDestinationProperty="PI" text="Cables OK" selected="true" >
+          </component>
+          <component type="CheckBox" name="Flucs" cloudDestinationProperty="PD" text="Flucs OK" selected="true" >
+          </component>
+        </component>
+      </component>
     </component>
-    <component type="Container" name="Container2" tabTitle="Tab" cloudDestinationProperty="Container2" >
+    <component type="Container" name="ContainerTab3" tabTitle="Tab" cloudDestinationProperty="Container2" layout="BoxLayout" boxLayoutAxis="Y" >
     </component>
-    <component type="Container" name="Container3" tabTitle="Tab" cloudDestinationProperty="Container3" >
+    <component type="Container" name="ContainerTab4" tabTitle="Tab" cloudDestinationProperty="Container3" layout="BoxLayout" boxLayoutAxis="Y" >
     </component>
   </component>
 </component>
