--- a/res/theme/Inspeccion.ui
+++ b/res/theme/Inspeccion.ui
@@ -3,12 +3,12 @@
 <component type="Form" name="Inspeccion" cloudDestinationProperty="Inspeccion" layout="BoxLayout" boxLayoutAxis="Y" title="Inspecci&#xf3;n de Contenedores" >
   <component type="Tabs" name="Tabs" cloudDestinationProperty="Tabs" rtl="false" >
     <custom name="titles" type="java.lang.String" array="true" dimensions="1" >
-      <str>Datos</str>
-      <str>Tab</str>
-      <str>Tab</str>
-      <str>Tab</str>
+      <str>Datos 1</str>
+      <str>Datos 2</str>
+      <str>Datos 3</str>
+      <str>Datos 4</str>
     </custom>
-    <component type="Container" name="ContainerTab1" tabTitle="Datos" cloudDestinationProperty="Container" layout="BoxLayout" boxLayoutAxis="Y" >
+    <component type="Container" name="ContainerTab1" tabTitle="Datos 1" cloudDestinationProperty="Container" layout="BoxLayout" boxLayoutAxis="Y" >
       <component type="ComponentGroup" name="ComponentGroup" cloudDestinationProperty="ComponentGroup" >
         <component type="TextField" name="ContenedorNum" cloudBoundProperty="text" cloudDestinationProperty="ContenedorNum" text="" hint="N&#xfa;mero de contenedor" >
         </component>
@@ -32,7 +32,7 @@
         </component>
       </component>
     </component>
-    <component type="Container" name="ContainerTab2" tabTitle="Tab" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
+    <component type="Container" name="ContainerTab2" tabTitle="Datos 2" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
       <component type="Container" name="Container1" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Puertas" icon="puertas.png" >
         </component>
@@ -63,10 +63,66 @@
           </component>
         </component>
       </component>
+      <component type="Container" name="Container4" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
+        <component type="Label" name="Label" cloudDestinationProperty="Label" text="Lados externos" icon="lados.png" >
+        </component>
+        <component type="Container" name="Container" cloudDestinationProperty="Container" >
+          <component type="CheckBox" name="LEI" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          </component>
+          <component type="CheckBox" name="LED" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          </component>
+        </component>
+      </component>
+      <component type="Container" name="Container5" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
+        <component type="Label" name="Label" cloudDestinationProperty="Label" text="Lados internos" icon="lados.png" >
+        </component>
+        <component type="Container" name="Container" cloudDestinationProperty="Container" >
+          <component type="CheckBox" name="LII" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          </component>
+          <component type="CheckBox" name="LID" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          </component>
+        </component>
+      </component>
     </component>
-    <component type="Container" name="ContainerTab3" tabTitle="Tab" cloudDestinationProperty="Container2" layout="BoxLayout" boxLayoutAxis="Y" >
+    <component type="Container" name="ContainerTab3" tabTitle="Datos 3" cloudDestinationProperty="Container2" layout="BoxLayout" boxLayoutAxis="Y" >
+      <component type="Container" name="Container1" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
+        <component type="Label" name="Label" cloudDestinationProperty="Label" text="Techo" icon="techo.png" >
+        </component>
+        <component type="CheckBox" name="T" cloudDestinationProperty="PI" text="OK" selected="true" >
+        </component>
+      </component>
+      <component type="Container" name="Container2" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
+        <component type="Label" name="Label" cloudDestinationProperty="Label" text="Piso" icon="piso.png" >
+        </component>
+        <component type="CheckBox" name="P" cloudDestinationProperty="PI" text="OK" selected="true" >
+        </component>
+      </component>
+      <component type="Container" name="Container3" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
+        <component type="Label" name="Label" cloudDestinationProperty="Label" text="Estructura inferior" icon="estructuraInferior.png" >
+        </component>
+        <component type="CheckBox" name="EINF" cloudDestinationProperty="PI" text="OK" selected="true" >
+        </component>
+      </component>
+      <component type="Container" name="Container4" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
+        <component type="Label" name="Label" cloudDestinationProperty="Label" text="Estructura interna" icon="estructuraInterna.png" >
+        </component>
+        <component type="CheckBox" name="EINT" cloudDestinationProperty="PI" text="OK" selected="true" >
+        </component>
+      </component>
+      <component type="Container" name="Container5" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
+        <component type="Label" name="Label" cloudDestinationProperty="Label" text="Chasis" icon="chasis.png" >
+        </component>
+        <component type="CheckBox" name="C" cloudDestinationProperty="PI" text="OK" selected="true" >
+        </component>
+      </component>
     </component>
-    <component type="Container" name="ContainerTab4" tabTitle="Tab" cloudDestinationProperty="Container3" layout="BoxLayout" boxLayoutAxis="Y" >
+    <component type="Container" name="ContainerTab4" tabTitle="Datos 4" cloudDestinationProperty="Container3" layout="BoxLayout" boxLayoutAxis="Y" >
+      <component type="ComponentGroup" name="ComponentGroup1" cloudDestinationProperty="ComponentGroup1" >
+        <component type="TextArea" name="Observaciones" cloudBoundProperty="text" cloudDestinationProperty="Observaciones" text="" hint="Observaciones" rows="5" >
+        </component>
+      </component>
+      <component type="Button" name="Grabar" cloudDestinationProperty="Grabar" flatten="false" text="Grabar datos de formulario" >
+      </component>
     </component>
   </component>
 </component>
