--- a/res/theme/Inspeccion.ui
+++ b/res/theme/Inspeccion.ui
@@ -10,25 +10,27 @@
     </custom>
     <component type="Container" name="ContainerTab1" tabTitle="Datos 1" cloudDestinationProperty="Container" layout="BoxLayout" boxLayoutAxis="Y" >
       <component type="ComponentGroup" name="ComponentGroup" cloudDestinationProperty="ComponentGroup" >
-        <component type="TextField" name="ContenedorNum" cloudBoundProperty="text" cloudDestinationProperty="ContenedorNum" text="" hint="N&#xfa;mero de contenedor" >
+        <component type="TextField" name="ContenedorNum" cloudBoundProperty="text" cloudDestinationProperty="ContenedorNum" text="" maxSize="11" hint="N&#xfa;mero de contenedor" >
         </component>
-        <component type="TextField" name="Tamano" cloudBoundProperty="text" cloudDestinationProperty="TextField1" text="" hint="Tama&#xf1;o" >
+        <component type="TextField" name="Tamano" cloudBoundProperty="text" cloudDestinationProperty="TextField1" text="" constraint="0" maxSize="2" hint="Tama&#xf1;o" >
         </component>
-        <component type="TextField" name="Chasis" cloudBoundProperty="text" cloudDestinationProperty="TextField3" text="" hint="Chasis" >
+        <component type="TextField" name="Chasis" cloudBoundProperty="text" cloudDestinationProperty="TextField3" text="" maxSize="8" hint="Chasis" >
         </component>
-        <component type="TextField" name="TrailerPlaca" cloudBoundProperty="text" cloudDestinationProperty="TextField2" text="" hint="Placa de trailer" >
+        <component type="TextField" name="TrailerPlaca" cloudBoundProperty="text" cloudDestinationProperty="TextField2" text="" maxSize="8" hint="Placa de trailer" >
         </component>
-        <component type="TextField" name="Cliente" cloudBoundProperty="text" cloudDestinationProperty="Cliente" text="" hint="Cliente" >
+        <component type="TextField" name="Cliente" cloudBoundProperty="text" cloudDestinationProperty="Cliente" text="" maxSize="100" hint="Cliente" >
+        </component>
+        <component type="DateSpinner" name="DateSpinner" cloudDestinationProperty="DateSpinner" focusable="false" >
         </component>
         <component type="TextField" name="Fecha" cloudBoundProperty="text" cloudDestinationProperty="Fecha" focusable="true" enabled="true" text="" hint="Fecha" >
         </component>
-        <component type="TextField" name="Agencia" cloudBoundProperty="text" cloudDestinationProperty="Agencia" text="" hint="Agencia naviera" >
+        <component type="TextField" name="Agencia" cloudBoundProperty="text" cloudDestinationProperty="Agencia" text="" maxSize="30" hint="Agencia naviera" >
         </component>
-        <component type="TextField" name="Vapor" cloudBoundProperty="text" cloudDestinationProperty="Vapor" text="" hint="Vapor" >
+        <component type="TextField" name="Vapor" cloudBoundProperty="text" cloudDestinationProperty="Vapor" text="" maxSize="30" hint="Vapor" >
         </component>
-        <component type="TextField" name="Destino" cloudBoundProperty="text" cloudDestinationProperty="Destino" text="" hint="Destino" >
+        <component type="TextField" name="Destino" cloudBoundProperty="text" cloudDestinationProperty="Destino" text="" maxSize="30" hint="Destino" >
         </component>
-        <component type="TextField" name="Factura" cloudBoundProperty="text" cloudDestinationProperty="Factura" text="" hint="Factura" >
+        <component type="TextField" name="Factura" cloudBoundProperty="text" cloudDestinationProperty="Factura" text="" maxSize="30" hint="Factura" >
         </component>
       </component>
     </component>
@@ -37,9 +39,9 @@
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Puertas" icon="puertas.png" >
         </component>
         <component type="Container" name="Container" cloudDestinationProperty="Container" >
-          <component type="CheckBox" name="PI" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          <component type="CheckBox" name="PuertaIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
           </component>
-          <component type="CheckBox" name="PD" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          <component type="CheckBox" name="PuertaDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
           </component>
         </component>
       </component>
@@ -47,9 +49,9 @@
         <component type="Label" name="Label1" cloudDestinationProperty="Label1" text="Pared frontal interna" icon="paredFrontalInterna.png" >
         </component>
         <component type="Container" name="Container3" cloudDestinationProperty="Container" >
-          <component type="CheckBox" name="PFII" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          <component type="CheckBox" name="ParedFrontalInternaIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
           </component>
-          <component type="CheckBox" name="PFID" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          <component type="CheckBox" name="ParedFrontalInternaDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
           </component>
         </component>
       </component>
@@ -67,9 +69,9 @@
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Lados externos" icon="lados.png" >
         </component>
         <component type="Container" name="Container" cloudDestinationProperty="Container" >
-          <component type="CheckBox" name="LEI" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          <component type="CheckBox" name="LadosExternosIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
           </component>
-          <component type="CheckBox" name="LED" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          <component type="CheckBox" name="LadosExternosDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
           </component>
         </component>
       </component>
@@ -77,9 +79,9 @@
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Lados internos" icon="lados.png" >
         </component>
         <component type="Container" name="Container" cloudDestinationProperty="Container" >
-          <component type="CheckBox" name="LII" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          <component type="CheckBox" name="LadosInternosIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
           </component>
-          <component type="CheckBox" name="LID" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          <component type="CheckBox" name="LadosInternosDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
           </component>
         </component>
       </component>
@@ -88,37 +90,37 @@
       <component type="Container" name="Container1" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Techo" icon="techo.png" >
         </component>
-        <component type="CheckBox" name="T" cloudDestinationProperty="PI" text="OK" selected="true" >
+        <component type="CheckBox" name="Techo" cloudDestinationProperty="PI" text="OK" selected="true" >
         </component>
       </component>
       <component type="Container" name="Container2" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Piso" icon="piso.png" >
         </component>
-        <component type="CheckBox" name="P" cloudDestinationProperty="PI" text="OK" selected="true" >
+        <component type="CheckBox" name="Piso" cloudDestinationProperty="PI" text="OK" selected="true" >
         </component>
       </component>
       <component type="Container" name="Container3" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Estructura inferior" icon="estructuraInferior.png" >
         </component>
-        <component type="CheckBox" name="EINF" cloudDestinationProperty="PI" text="OK" selected="true" >
+        <component type="CheckBox" name="EstructuraInferior" cloudDestinationProperty="PI" text="OK" selected="true" >
         </component>
       </component>
       <component type="Container" name="Container4" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Estructura interna" icon="estructuraInterna.png" >
         </component>
-        <component type="CheckBox" name="EINT" cloudDestinationProperty="PI" text="OK" selected="true" >
+        <component type="CheckBox" name="EstructuraInterna" cloudDestinationProperty="PI" text="OK" selected="true" >
         </component>
       </component>
       <component type="Container" name="Container5" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Chasis" icon="chasis.png" >
         </component>
-        <component type="CheckBox" name="C" cloudDestinationProperty="PI" text="OK" selected="true" >
+        <component type="CheckBox" name="ChasisCheck" cloudDestinationProperty="PI" text="OK" selected="true" >
         </component>
       </component>
     </component>
-    <component type="Container" name="ContainerTab4" tabTitle="Datos 4" cloudDestinationProperty="Container3" layout="BoxLayout" boxLayoutAxis="Y" >
+    <component type="Container" name="ContainerTab4" tabTitle="Datos 4" cloudDestinationProperty="Container3" flatten="true" layout="BoxLayout" boxLayoutAxis="Y" >
       <component type="ComponentGroup" name="ComponentGroup1" cloudDestinationProperty="ComponentGroup1" >
-        <component type="TextArea" name="Observaciones" cloudBoundProperty="text" cloudDestinationProperty="Observaciones" text="" hint="Observaciones" rows="5" >
+        <component type="TextArea" name="Observaciones" cloudBoundProperty="text" cloudDestinationProperty="Observaciones" text="" maxSize="100" hint="Observaciones" rows="5" >
         </component>
       </component>
       <component type="Button" name="Grabar" cloudDestinationProperty="Grabar" flatten="false" text="Grabar datos de formulario" >
