--- a/res/theme/Main.ui
+++ b/res/theme/Main.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <component type="Form" name="Main" cloudDestinationProperty="Main" layout="BoxLayout" boxLayoutAxis="Y" title="SGS - Men&#xfa;" >
-  <component type="Button" name="Inpeccion" cloudDestinationProperty="Inpeccion" commandName="Inspecci&#xf3;n de contenedores" commandId="1" commandAction="Inspeccion" commandBack="false" text="Inspecci&#xf3;n de contenedores" >
+  <component type="Button" name="BotonInspeccion" cloudDestinationProperty="Inpeccion" commandName="Inspecci&#xf3;n de contenedores" commandId="1" commandAction="Inspeccion" commandBack="false" text="Inspecci&#xf3;n de contenedores" >
   </component>
-  <component type="Button" name="Datos" cloudDestinationProperty="Datos" text="Datos del Contenedor" >
+  <component type="Button" name="BotonDatos" cloudDestinationProperty="Datos" text="Datos del Contenedor" >
   </component>
-  <component type="Button" name="ControlEmbarque" cloudDestinationProperty="ControlEmbarque" text="Control de Embarque Granel" >
+  <component type="Button" name="BotonControlEmbarque" cloudDestinationProperty="ControlEmbarque" text="Control de Embarque Granel" >
   </component>
-  <component type="Button" name="Configuracion" cloudDestinationProperty="Configuracion" text="Configuraci&#xf3;n" >
+  <component type="Button" name="BotonConfiguracion" cloudDestinationProperty="Configuracion" text="Configuraci&#xf3;n" >
   </component>
 </component>
