--- a/res/theme/Inspeccion.ui
+++ b/res/theme/Inspeccion.ui
@@ -10,27 +10,27 @@
     </custom>
     <component type="Container" name="ContainerTab1" tabTitle="Datos 1" cloudDestinationProperty="Container" layout="BoxLayout" boxLayoutAxis="Y" >
       <component type="ComponentGroup" name="ComponentGroup" cloudDestinationProperty="ComponentGroup" >
-        <component type="TextField" name="ContenedorNum" cloudBoundProperty="text" cloudDestinationProperty="ContenedorNum" text="" maxSize="11" hint="N&#xfa;mero de contenedor" >
+        <component type="TextField" name="contenedorNum" cloudBoundProperty="text" cloudDestinationProperty="ContenedorNum" text="" maxSize="11" hint="N&#xfa;mero de contenedor" >
         </component>
-        <component type="TextField" name="Tamano" cloudBoundProperty="text" cloudDestinationProperty="TextField1" text="" constraint="0" maxSize="2" hint="Tama&#xf1;o" >
+        <component type="TextField" name="tamano" cloudBoundProperty="text" cloudDestinationProperty="TextField1" text="" constraint="0" maxSize="2" hint="Tama&#xf1;o" >
         </component>
-        <component type="TextField" name="Chasis" cloudBoundProperty="text" cloudDestinationProperty="TextField3" text="" maxSize="8" hint="Chasis" >
+        <component type="TextField" name="chasis" cloudBoundProperty="text" cloudDestinationProperty="TextField3" text="" maxSize="8" hint="Chasis" >
         </component>
-        <component type="TextField" name="TrailerPlaca" cloudBoundProperty="text" cloudDestinationProperty="TextField2" text="" maxSize="8" hint="Placa de trailer" >
+        <component type="TextField" name="trailerPlaca" cloudBoundProperty="text" cloudDestinationProperty="TextField2" text="" maxSize="8" hint="Placa de trailer" >
         </component>
-        <component type="TextField" name="Cliente" cloudBoundProperty="text" cloudDestinationProperty="Cliente" text="" maxSize="100" hint="Cliente" >
+        <component type="TextField" name="cliente" cloudBoundProperty="text" cloudDestinationProperty="Cliente" text="" maxSize="100" hint="Cliente" >
         </component>
-        <component type="DateSpinner" name="DateSpinner" cloudDestinationProperty="DateSpinner" focusable="false" >
+        <component type="DateSpinner" name="dateSpinner" cloudDestinationProperty="DateSpinner" focusable="false" >
         </component>
-        <component type="TextField" name="Fecha" cloudBoundProperty="text" cloudDestinationProperty="Fecha" focusable="true" enabled="true" text="" hint="Fecha" >
+        <component type="TextField" name="fecha" cloudBoundProperty="text" cloudDestinationProperty="Fecha" focusable="true" enabled="true" text="" hint="Fecha" >
         </component>
-        <component type="TextField" name="Agencia" cloudBoundProperty="text" cloudDestinationProperty="Agencia" text="" maxSize="30" hint="Agencia naviera" >
+        <component type="TextField" name="agencia" cloudBoundProperty="text" cloudDestinationProperty="Agencia" text="" maxSize="30" hint="Agencia naviera" >
         </component>
-        <component type="TextField" name="Vapor" cloudBoundProperty="text" cloudDestinationProperty="Vapor" text="" maxSize="30" hint="Vapor" >
+        <component type="TextField" name="vapor" cloudBoundProperty="text" cloudDestinationProperty="Vapor" text="" maxSize="30" hint="Vapor" >
         </component>
-        <component type="TextField" name="Destino" cloudBoundProperty="text" cloudDestinationProperty="Destino" text="" maxSize="30" hint="Destino" >
+        <component type="TextField" name="destino" cloudBoundProperty="text" cloudDestinationProperty="Destino" text="" maxSize="30" hint="Destino" >
         </component>
-        <component type="TextField" name="Factura" cloudBoundProperty="text" cloudDestinationProperty="Factura" text="" maxSize="30" hint="Factura" >
+        <component type="TextField" name="factura" cloudBoundProperty="text" cloudDestinationProperty="Factura" text="" maxSize="30" hint="Factura" >
         </component>
       </component>
     </component>
@@ -39,9 +39,9 @@
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Puertas" icon="puertas.png" >
         </component>
         <component type="Container" name="Container" cloudDestinationProperty="Container" >
-          <component type="CheckBox" name="PuertaIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          <component type="CheckBox" name="puertaIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
           </component>
-          <component type="CheckBox" name="PuertaDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          <component type="CheckBox" name="puertaDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
           </component>
         </component>
       </component>
@@ -49,9 +49,9 @@
         <component type="Label" name="Label1" cloudDestinationProperty="Label1" text="Pared frontal interna" icon="paredFrontalInterna.png" >
         </component>
         <component type="Container" name="Container3" cloudDestinationProperty="Container" >
-          <component type="CheckBox" name="ParedFrontalInternaIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          <component type="CheckBox" name="paredFrontalInternaIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
           </component>
-          <component type="CheckBox" name="ParedFrontalInternaDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          <component type="CheckBox" name="paredFrontalInternaDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
           </component>
         </component>
       </component>
@@ -59,9 +59,9 @@
         <component type="Label" name="Label1" cloudDestinationProperty="Label1" text="Unidad de refrigeraci&#xf3;n" icon="uniadRefrigeracion.png" >
         </component>
         <component type="Container" name="Container3" cloudDestinationProperty="Container" >
-          <component type="CheckBox" name="Cables" cloudDestinationProperty="PI" text="Cables OK" selected="true" >
+          <component type="CheckBox" name="cables" cloudDestinationProperty="PI" text="Cables OK" selected="true" >
           </component>
-          <component type="CheckBox" name="Flucs" cloudDestinationProperty="PD" text="Flucs OK" selected="true" >
+          <component type="CheckBox" name="flucs" cloudDestinationProperty="PD" text="Flucs OK" selected="true" >
           </component>
         </component>
       </component>
@@ -69,9 +69,9 @@
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Lados externos" icon="lados.png" >
         </component>
         <component type="Container" name="Container" cloudDestinationProperty="Container" >
-          <component type="CheckBox" name="LadosExternosIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          <component type="CheckBox" name="ladosExternosIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
           </component>
-          <component type="CheckBox" name="LadosExternosDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          <component type="CheckBox" name="ladosExternosDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
           </component>
         </component>
       </component>
@@ -79,9 +79,9 @@
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Lados internos" icon="lados.png" >
         </component>
         <component type="Container" name="Container" cloudDestinationProperty="Container" >
-          <component type="CheckBox" name="LadosInternosIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
+          <component type="CheckBox" name="ladosInternosIzquierda" cloudDestinationProperty="PI" text="Izquierda OK" selected="true" >
           </component>
-          <component type="CheckBox" name="LadosInternosDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
+          <component type="CheckBox" name="ladosInternosDerecha" cloudDestinationProperty="PD" text="Derecha OK" selected="true" >
           </component>
         </component>
       </component>
@@ -90,40 +90,40 @@
       <component type="Container" name="Container1" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Techo" icon="techo.png" >
         </component>
-        <component type="CheckBox" name="Techo" cloudDestinationProperty="PI" text="OK" selected="true" >
+        <component type="CheckBox" name="techo" cloudDestinationProperty="PI" text="OK" selected="true" >
         </component>
       </component>
       <component type="Container" name="Container2" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Piso" icon="piso.png" >
         </component>
-        <component type="CheckBox" name="Piso" cloudDestinationProperty="PI" text="OK" selected="true" >
+        <component type="CheckBox" name="piso" cloudDestinationProperty="PI" text="OK" selected="true" >
         </component>
       </component>
       <component type="Container" name="Container3" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Estructura inferior" icon="estructuraInferior.png" >
         </component>
-        <component type="CheckBox" name="EstructuraInferior" cloudDestinationProperty="PI" text="OK" selected="true" >
+        <component type="CheckBox" name="estructuraInferior" cloudDestinationProperty="PI" text="OK" selected="true" >
         </component>
       </component>
       <component type="Container" name="Container4" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Estructura interna" icon="estructuraInterna.png" >
         </component>
-        <component type="CheckBox" name="EstructuraInterna" cloudDestinationProperty="PI" text="OK" selected="true" >
+        <component type="CheckBox" name="estructuraInterna" cloudDestinationProperty="PI" text="OK" selected="true" >
         </component>
       </component>
       <component type="Container" name="Container5" cloudDestinationProperty="Container1" layout="BoxLayout" boxLayoutAxis="Y" >
         <component type="Label" name="Label" cloudDestinationProperty="Label" text="Chasis" icon="chasis.png" >
         </component>
-        <component type="CheckBox" name="ChasisCheck" cloudDestinationProperty="PI" text="OK" selected="true" >
+        <component type="CheckBox" name="chasisCheck" cloudDestinationProperty="PI" text="OK" selected="true" >
         </component>
       </component>
     </component>
     <component type="Container" name="ContainerTab4" tabTitle="Datos 4" cloudDestinationProperty="Container3" flatten="true" layout="BoxLayout" boxLayoutAxis="Y" >
       <component type="ComponentGroup" name="ComponentGroup1" cloudDestinationProperty="ComponentGroup1" >
-        <component type="TextArea" name="Observaciones" cloudBoundProperty="text" cloudDestinationProperty="Observaciones" text="" maxSize="100" hint="Observaciones" rows="5" >
+        <component type="TextArea" name="observaciones" cloudBoundProperty="text" cloudDestinationProperty="Observaciones" text="" maxSize="100" hint="Observaciones" rows="5" >
         </component>
       </component>
-      <component type="Button" name="Grabar" cloudDestinationProperty="Grabar" flatten="false" text="Grabar datos de formulario" >
+      <component type="Button" name="grabar" cloudDestinationProperty="Grabar" flatten="false" text="Grabar datos de formulario" >
       </component>
     </component>
   </component>
