--- a/res/theme/ControlEmbarque1.ui
+++ b/res/theme/ControlEmbarque1.ui
@@ -17,15 +17,7 @@
       <layoutConstraint value="East" />
     </component>
   </component>
-  <component type="Container" name="Container" cloudDestinationProperty="Container" scrollableY="true" layout="BoxLayout" boxLayoutAxis="Y" >
+  <component type="Container" name="listaContenedoresCnt" cloudDestinationProperty="Container" scrollableY="true" layout="BoxLayout" boxLayoutAxis="Y" >
     <layoutConstraint value="Center" />
-    <component type="MultiButton" name="MultiButton" cloudDestinationProperty="MultiButton" >
-      <custom name="line1" type="java.lang.String" value="MNBU3435016" />
-      <custom name="line2" type="java.lang.String" value="2016-08-24 ESTAR ESPA&#xd1;A" />
-      <custom name="line3" type="java.lang.String" value="" />
-      <custom name="line4" type="java.lang.String" value="" />
-      <custom name="name3" type="java.lang.String" value="" />
-      <custom name="name4" type="java.lang.String" value="" />
-    </component>
   </component>
 </component>
